@@ -92,6 +92,7 @@ ENDIF(WIN32 OR WIN64 OR CYGWIN OR MINGW)
 
 # Add in some path suffixes. These will have to be updated whenever a new Boost version comes out.
 SET(SUFFIX_FOR_PATH
+ boost_1_56_0
  boost_1_51_0
  boost_1_50_0
  boost_1_49_0
